--- a/client/src/app/shared/components/pager/pager.component.html
+++ b/client/src/app/shared/components/pager/pager.component.html
@@ -1,7 +1,8 @@
 <pagination 
 [boundaryLinks]="true" 
-[totalItems]="totalCount" 
-(pageChanged)="onPagerChange($event)" 
+[totalItems]="totalCount"
+(pageChanged)="onPagerChange($event)"
+[ngModel]="pageNumber"
 [itemsPerPage]="pageSize" 
 previousText="&lsaquo;" 
 nextText="&rsaquo;" 
